reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_empty_input.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructEmpty::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructEmpty"
    }
  ]
}
