reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_empty_output.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructEmpty::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructEmpty"
    }
  ]
}
