reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_newtype_input.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructNewtype::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructNewtype",
      "fields": [
        {
          "name": "0",
          "type": {
            "name": "std::string::String"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    }
  ]
}
