reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_one_basic_field.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructOneBasicField::reflect()"
---
Schema {
    name: "",
    types: [
        Type {
            name: "TestStructOneBasicField",
            fields: [
                Field {
                    name: "_f",
                    ty: "Type::Path { qself: None, path: Path { leading_colon: None, segments: [PathSegment { ident: Ident { ident: \"u32\", span: #0 bytes(833..836) }, arguments: PathArguments::None }] } }",
                    _debug: "",
                },
            ],
            _debug: "",
        },
    ],
    _debug: "",
}
