reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_one_basic_field_string.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructOneBasicFieldString::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructOneBasicFieldString",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::string::String"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String"
    }
  ]
}
