reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_equally2_output.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructOneBasicFieldStringReflectBothEqually2::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "name": "u32"
    },
    {
      "name": "reflect_demo::test::TestStructOneBasicFieldStringReflectBothEqually2",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "u32"
          }
        }
      ]
    }
  ]
}
