reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_equally_input.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructOneBasicFieldStringReflectBothEqually::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "name": "reflect_demo::test::TestStructOneBasicFieldStringReflectBothEqually",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "u32"
          }
        }
      ]
    },
    {
      "name": "u32"
    }
  ]
}
