reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_input.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructOneBasicFieldStringReflectBoth::reflect_input()"
---
Schema {
    name: "",
    types: [
        Type {
            name: "reflect_demo::test::TestStructOneBasicFieldStringReflectBoth",
            fields: [
                Field {
                    name: "_f",
                    type_ref: TypeRef {
                        name: "String",
                    },
                    _debug: "",
                },
            ],
            _debug: "",
        },
    ],
    _debug: "",
    types_map: {
        "reflect_demo::test::TestStructOneBasicFieldStringReflectBoth": 0,
    },
}
