reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_output.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructOneBasicFieldStringReflectBoth::reflect_output()"
---
Schema {
    name: "",
    types: [
        Type {
            name: "TestStructOneBasicFieldStringReflectBoth",
            fields: [
                Field {
                    name: "_f",
                    type_ref: TypeRef {
                        name: "String",
                    },
                    _debug: "",
                },
            ],
            _debug: "",
        },
    ],
    _debug: "",
}
